syntax = "proto3";

option go_package = "github.com/YOJIA-yukino/simple-douyin-backend/api/rpc_service_dao/user";

package user;

service UserDaoInfo{
  rpc addUser(UserDaoPost) returns(BaseDaoResp);
  rpc getUserInfoByUserName(UserDaoPost) returns(UserDaoInfoResp);
  rpc getUserInfoByUserId(UserDaoPost) returns(UserDaoInfoResp);
  rpc getUserInfoByUserNameAndPassword(UserDaoPost) returns(UserDaoInfoResp);
}

message BaseDaoResp{
  int32 status_code = 1;
  string status_msg = 2;
}

message UserDaoPost{
  string username = 1;
  string password = 2;
  int64 userId = 3;
}

message UserDaoInfoResp{
  int64 Id = 1;
  string Name = 2;
  int64 FollowCnt = 3;
  int64 FollowerCnt = 4;
  BaseDaoResp baseResp = 5;
}